src/index.css
body {
  margin: 0;
  padding: 0;
  background-color: rgb(250, 250, 255);
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
}

header {
  display: flex;
  align-items: center;
  padding-left: 10px;
  margin-top: 15px;
  flex-wrap: wrap;
}

header form {
  margin: 0 10px 0;
}

header h3 {
  margin: 0;
}

input {
  margin-right: 5px;
}

input[type="text"] {
  padding: 3px;
  border-radius: 5px;
  border: 1px solid #c1c1c1;
  outline: none;
}

input[type="text"]:focus {
  border: 1px solid black;
}

button {
  background-color: #fbfbff;
  border-radius: 5px;
}

.info-container {
  position: relative;
  height: 2em;
  width: 2em;
}

.info-container img {
  position: absolute;
  top: 0;
  height: 1.8em;
  width: 1.8em;
  padding: 0.2em;
  border-radius: 50%;
}

.info-container img:hover {
  background-color: #eeeeee;
}

.info-container span {
  display: block;
  background-color: #fcfcff;
  position: absolute;
  top: 2.2em;
  left: 0px;
  width: 220px;
  border-radius: 5px;
  padding: 5px;
  border: 1px solid #eeeeee;
  box-shadow: 5px 5px 3px rgba(40, 40, 40, 0.5);
  color: #252525;
  font-size: 0.9em;
  transition: opacity 0.25s ease-in-out;
}

.shown {
  opacity: 1;
}

.hidden {
  opacity: 0;
}

#color-section {
  display: flex;
  margin-top: 15px;
  flex-wrap:  wrap;
}

#color-section div {
  width: 20%;
  height: 100px;
  padding-left: 10px;
}

@media screen and (max-width: 900px) {
  #color-section div {
    width: 100%;
  }

  header h3 {
    width: 100%;
  }

  header form {
    margin-left: 0;
  }

  header {
    margin-bottom: 10px;
  }

  .info-container span {
    left: unset;
    right: 20%;
  }
}

